Revision history for Util::CommandLine

{{$NEXT}}

1.05      2020-06-11 14:05:47-07:00 America/Los_Angeles
        - Provide support for "example|e=s{1,3}" syntax
        - Allow option() input to be in single string format

1.04      2019-08-08 09:15:33-07:00 America/Los_Angeles
        - Add Term::ReadKey's ReadMode; setup singelton as a function
        - Adding Perl versions to test; annual general update for 2018

1.03      2016-11-28 21:48:29-08:00 America/Los_Angeles
        - Try multiple locations for the singleton PID file before deathing

1.02      2015-06-30 06:32:53-07:00 America/Los_Angeles
        - Small POD improvement.

1.01      2015-06-29 21:44:02-07:00 America/Los_Angeles
        - First version, released on an unsuspecting world.