@@ -1,6 +1,8 @@
 Revision history for Util::CommandLine
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
 
 1.05      2020-06-11 14:05:47-07:00 America/Los_Angeles
         - Provide support for "example|e=s{1,3}" syntax
